<resources>
    <string name="app_name">iDamo</string>
    <string name="application_logo">Application Logo</string>
    <string name="title_crops">CROPS</string>
    <string name="title_community">COMMUNITY</string>
    <string name="title_you">YOU</string>
    <string name="upload">UPLOAD</string>
    <string name="take_a_picture">TAKE A PICTURE</string>
    <string name="heal_your_plants">Heal Your Plants</string>
    <string name="weather">Weather</string>
    <string name="kebab_btn">kebab_btn</string>
    <string name="settings">Settings</string>
    <string name="rate_idamo">Rate (iDamo)</string>
    <string name="share_idamo">Share (iDamo)</string>
    <string name="legal_notices">Legal Notices</string>
    <string name="tutorial">Tutorial</string>
    <string name="filter_by">Filter By</string>
    <string name="floating_btn_string">Ask Community</string>
    <string name="search_in_community">Search in Community</string>
    <string name="user_name">Sample User Name</string>
    <string name="user_bio">Bio</string>
    <string name="community_rank">Community Rank</string>
    <string name="user_picture">User_Picture</string>
    <string name="beginner_rank">Beginner</string>
    <string name="community_rank_icon">Community Rank Icon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="google_icon">google_icon</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="done">Done</string>
    <string name="edit">edit</string>
    <string name="edit_user_details">EDIT USER DETAILS</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
    <string name="my_posts">My Posts</string>
    <string name="posts">Posts</string>
    <string name="save">SAVE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">reset</string>
    <string name="reset_password">reset password</string>
    <string name="todo">TODO</string>
    <string name="Leaflets">Leaflets</string>
    <string name="disease_name">Disease Name</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        \n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        \n\n\n\n\n\nExcepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

        &#8226; foo<br />
        &#8226; bar<br />
        &#8226; baz<br />
    </string>
    <string name="downyMildewDiseaseTitle">Downey Mildew</string>
    <string name="downyMildewDiseaseDescription">\t\tA type of oomycetes or water mold, downy mildew causes the growth of gray or white, as well as the yellowing and wilting of leaves. A harmful pathogen that develops on the underside of leaves that can cover the entire leaf and causes it to turn brown and dry up.
        \n\n\t\tHeavy infection of downy mildew can devastate a crop and kill most of the plants within a week. It can spread everywhere stopping the plant from photosynthesizing on these yellow or brown spots.
        \n\n\n<a href="https://ipm.ucanr.edu/agriculture/lettuce/downy-mildew/"><font fgcolor="#00FFFF">~ University of California Agriculture &amp; Natural Resources</font></a>
    </string>
    <string name="downyMildewDiseaseSymptoms">\t\tDowny mildew causes light green to yellow spots found on the upper surface of leaves and hemmed in by the leaf veins. Sporulation or downy fuzz can also be seen on the underside of the leaf when the weather is wet or humid.
    \n\n\t\tDamp, cool conditions and moisture on leaves causes the disease to arise and can lead to stunted growth and reduced yields. Downy mildews are air water borne pathogens and can spread progressively if left unattended.
    \n\n\n<a href="https://ipm.ucanr.edu/agriculture/lettuce/downy-mildew/"><font fgcolor="#00FFFF">~ University of California Agriculture &amp; Natural Resources</font></a>
    </string>
    <string name="downyMildewDiseaseSolution">\t\tThe following guideline are for the treatment and prevention of Downy Mildew.
    \n\n\n<b><font fgcolor="#FFFFFF">Prevention:</font></b>
    \n\n⦿ Trim and dispose infected areas immediately.
    \n\n⦿ Prune and remove weeds to improve air circulation.
    \n\n⦿ Do not overcrowd plants.
    \n\n⦿ Avoid overhead watering. Water the base of the plant rather than the foliage, it prevents the spread of diseases and fungal growth on the plant.
    \n\n⦿ Use drip irrigation or low volume sprinklers.
    \n\n\n<b><font fgcolor="#FFFFFF">Remedies:</font></b>
    \n\n\nA. Baking Soda Solution:
    \n\n\t1. Mix 1 tablespoon of baking soda and 1/2 teaspoon of liquid soap and 1 gallon of water in a spray bottle.
    \n\n\t2. Gently spray the solution on both top and bottom part of the leaves.
    \n\n\t3. Spray once for three to four weeks.
    \n\n\n<a href="https://www.nature-and-garden.com/gardening/treatement-downy-mildew-blight.html"><font fgcolor="#00FFFF">~ Nature &amp; Garden</font></a>
    \n\n\t <font fgcolor="#FFFFFF">* <i>Use soap such as Castile, do not use detergent.</i></font>
    \n\n\nB. Fungicides:
    \n\n\t1. Use organic fungicides, follow directions regarding application.
    \n\n\t2. Apply fungicide early to prevent outbreaks.
    \n\n\n<a href="https://www.nature-and-garden.com/gardening/treatement-downy-mildew-blight.html"><font fgcolor="#00FFFF">~ Nature &amp; Garden</font></a>
    </string>
    <string name="scarsSpotsDiseaseTitle">Leaf Scars / Black Spots</string>
    <string name="scarsSpotsDiseaseDescription">\t\tA round, black spot with fringed margins that grows up to ½ inch in diameter are caused by a fungus. This disease is found on flowers, fruits, and leaves, it commonly affects roses and other ornamental and garden plants.
        \n\n\t\tThe spots weaken the plant causing stress that may interrupt photosynthesis. These spots develop only on the upper surface of the leaves and the surrounding area turns yellow.
        \n\n\n<a href="https://extension.umn.edu/plant-diseases/leaf-spot-diseases-trees-and-shrubs"><font fgcolor="#00FFFF">~ University of Minnesota Extension</font></a>
    </string>
    <string name="scarsSpotsDiseaseSymptoms">\t\tBlack spots come in different form of dark, round leaf spots with irregular feathered margins. The spots form a yellow edge or ‘halo’ around the infected area of the leaf that can expand and cover the entire leaf.
    \n\n\t\tThe lowest parts of the plants are mostly infected first and can worsen overtime when left unchecked. Usually, black spots may arise when the weather is hot and humid, and leaves are moist for at least 6 hours.
    \n\n\n<a href="https://extension.umn.edu/plant-diseases/leaf-spot-diseases-trees-and-shrubs"><font fgcolor="#00FFFF">~ University of Minnesota Extension</font></a>
    </string>
    <string name="scarsSpotsDiseaseSolution">\t\tThe following guideline are for the treatment and prevention of Leaf Scar/Black Spots.
    \n\n\n<b><font fgcolor="#FFFFFF">Prevention:</font></b>
    \n\n⦿ Trim and dispose infected areas immediately.
    \n\n⦿ Prune or stake plants and remove any weeds to improve air circulation.
    \n\n⦿ Water in the early morning hours, or use a soaker hose, to give plants time to dry out during the day.
    \n\n⦿ Always dispose of fallen leaves to prevent the disease from spreading.
    \n\n\n<b><font fgcolor="#FFFFFF">Remedies:</font></b>
    \n\nA. Dairy Milk Solution:
    \n\n\t1. Combine 1-part diary milk to 2-parts water in a spray bottle.
    \n\n\t2. Spray the leaves once each week.
    \n\n\t <font fgcolor="#FFFFFF">* <i>Non-Diary milk substitutes won’t work.</i></font>
    \n\n\n<a href="https://extension.umn.edu/plant-diseases/leaf-spot-diseases-trees-and-shrubs"><font fgcolor="#00FFFF">~ University of Minnesota Extension</font></a>
    \n\n\nB. Baking Soda Solution:
    \n\n\t1. Mix 1 tablespoon of baking soda, 2.5 tablespoon of vegetable oil, 1 teaspoon of liquid soap, and 1 gallon of water in a spray bottle.
    \n\n\t2. Spray a small test area with the solution before spraying the entire plant.
    \n\n\t3. If burning if absent spray the leaves once every two weeks.
    \n\n\t <font fgcolor="#FFFFFF">* <i>Use liquid soap, not detergent.</i></font>
    \n\n\n<a href="https://www.wikihow.com/Deal-with-Black-Spot-Leaf-Disease"><font fgcolor="#00FFFF">~ WikiHow</font></a>
    \n\n\nC. Neem Oil:
    \n\n\t1. Spray the leaves with neem oil once every two weeks.
    \n\n\n<a href="https://www.wikihow.com/Deal-with-Black-Spot-Leaf-Disease"><font fgcolor="#00FFFF">~ WikiHow</font></a>
    \n\n\nD. Fungicides:
    \n\n\t1. Use organic fungicides as a last resort, follow directions regarding application.
    \n\n\t2. Apply fungicide early to prevent outbreaks.
    \n\n\n<a href="https://www.wikihow.com/Deal-with-Black-Spot-Leaf-Disease"><font fgcolor="#00FFFF">~ WikiHow</font></a>
    </string>
    <string name="shotHoleDiseaseTitle">Shot Hole</string>
    <string name="shotHoleDiseaseDescription">\t\tCoryneum Blight commonly known as Shot Hole is caused by a fungal pathogen Wilsonomyces Carpophilus. It often affects fruits, buds, and stems, but is most obvious on the leaves. Fruit bearing trees from the genus of Prunus such as peaches, apricots, cherries, plums, and nectarines are common to shot hole disease.
        \n\n\t\tWet and humid weather contributes to the spread of shot hole disease. Inadequate growing circumstances, environmental stress, and insects consuming foliage are just a few of the causes of the holes appearing in leaves.
        \n\n\n<a href="https://ipm.ucanr.edu/PMG/GARDEN/FRUIT/DISEASE/shothole.html"><font fgcolor="#00FFFF">~ University of California Agriculture &amp; Natural Resources</font></a>
    </string>
    <string name="shotHoleDiseaseSymptoms">\t\tShot hole first appear as purple or red spots that shortly expands and turn into brown patches that eventually falls off, leaving multiple round holes on the leaf. Each hole frequently has a thin yellow or brown ring surrounding the hole. The fungal disease also causes premature leaf drops and scabby lesions on the leaf.
    \n\n\t\tThe fungal spores spreads in splashing water, and common during warm, foggy, or rainy weather. Shot hole is most severe during mid to late summer where weather tends to be wet and humid.
    \n\n\n<a href="https://ipm.ucanr.edu/PMG/GARDEN/FRUIT/DISEASE/shothole.html"><font fgcolor="#00FFFF">~ University of California Agriculture &amp; Natural Resources</font></a>
    </string>
</resources>