<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.YouFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/you_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="10dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/kebab"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/appbar_title"
            app:titleTextColor="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/dashboard_appbar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/user_picture"
                android:elevation="10dp"
                android:src="@drawable/profile"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:elevation="10dp"
                android:fontFamily="arial"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/user_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/leaflet_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_name"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_leaflet"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/Leaflets"
                    android:src="@drawable/ic_baseline_eco_24"
                    app:layout_constraintEnd_toStartOf="@+id/leaflet_count"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorPrimary"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/leaflet_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="arial"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_leaflet"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/leaflet_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="arial"
                    android:text="@string/Leaflets"
                    android:textColor="@color/grey_font"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ic_leaflet"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/user_bio"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:elevation="10dp"
                android:fontFamily="arial"
                android:text="@string/user_bio"
                android:textColor="@color/grey_font"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/user_picture"
                app:layout_constraintTop_toBottomOf="@+id/user_name"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="78dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/message_button"
                app:layout_constraintTop_toBottomOf="@+id/user_bio" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/message_button"
                android:layout_width="135dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="Message"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/edit_button"
                app:layout_constraintHorizontal_bias="0.005"
                app:layout_constraintStart_toEndOf="@+id/user_picture"
                app:layout_constraintTop_toBottomOf="@+id/user_bio" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="10dp"
            android:fontFamily="@font/bevan"
            android:gravity="center"
            android:text="@string/posts"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/noPost"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="You Have No Post"
            android:textColor="@color/grey_font"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/youRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_shadow"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:text="@string/create"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:icon="@drawable/ic_baseline_create_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>